# multi-lang-cli-stubs

./: .gitignore  README.md
go/: go.mod  main.go
nodejs/: main.js  package-lock.json  package.json
python/: main.py  requirements.txt
rust/: Cargo.toml
rust/src/: main.rs
