[package]
name = "cli-stub"
version = "0.1.0"
authors = ["Gatewaynode <44749714+gatewaynode@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.13-alpha", package = "aws-sdk-dynamodb" }
tokio = { version = "1", features = ["full"] }
